# dclgen-parser

./: .gitignore  README.md  main.py  pyproject.toml  single_file_main.py
dclgen_parser/: excel_reporter.py  parser.py  reporter.py  scanner.py
tests/: parser_test.py  reporter_test.py  scanner_test.py  test_dclgen_scanner.py  test_excel_reporter.py
